--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,11 @@
   background-color: rgb(97, 98, 96);
   gap: 200px;
 }
+.keyname{
+  color: rgb(128 237 235);
+  align-items: center;
+  margin: 20px;
+}
 
 .container_items {
   color: rgb(24 28 20);
@@ -45,9 +50,10 @@
   text-align: center;
   padding: 80px 0px 80px 0px;
 }
+
 .container_items strong {
   text-shadow: 0px 0px 8px rgb(236 223 204);
-  color: rgb(236 223 204);
+  color: rgb(128 237 235) ;
 }
 
 .container_items .foto {
